--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </div>
             <div class="feature-card">
                 <h3>Resultados en 3-5 años</h3>
-                <p>Creado para ayudarte a construir una pensión anticipada en un periodo de 3 a 5 años, no décadas.</p>
+                <p>Creado para ayudarte a construir un plan de retiro en un periodo de 3 a 5 años.</p>
             </div>
             <div class="feature-card">
                 <h3>Transparencia total</h3>
@@ -363,8 +363,8 @@
                 <div class="plan-card">
                     <h3>BOXEAQUILE</h3>
                     <div class="price">$25<span>/mes</span></div>
-                    <p>Canal de señales para traders</p>
-                    <p>Señales, entradas y ayuda para superar pruebas de fondeo</p>
+                    <p>Canal de entrada a mercados financieros</p>
+                    <p>Señales,entradas y ayuda para superar pruebas de fondeo</p>
                     <p>Desde $25 mensuales</p>
                     <a href="#contact" class="btn">Más información</a>
                 </div>
@@ -452,7 +452,6 @@
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
             <p>&copy; 2025 PRIP. Todos los derechos reservados.</p>
         </div>
